force-app/main/default/objects/Opportunity/fields/TipoImovel__c.field-meta.xml
<CustomField>
    <fullName>TipoImovel__c</fullName>
    <label>Tipo imóvel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residencial</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Terreno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>