force-app/main/default/objects/Opportunity/fields/Tipos_de_Reinvestimento__c.field-meta.xml
<CustomField>
    <fullName>Tipos_de_Reinvestimento__c</fullName>
    <label>Tipos de Reinvestimento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Renovacao__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reinvestimento Integral</fullName>
            </value>
            <value>
                <fullName>Reinvestimento Parcial</fullName>
            </value>
            <value>
                <fullName>Reinvestimento com resgate do rendimento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>