force-app/main/default/objects/Opportunity/fields/TipoVeiculo__c.field-meta.xml
<CustomField>
    <fullName>TipoVeiculo__c</fullName>
    <label>Tipo de veículo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passeio</fullName>
            </value>
            <value>
                <fullName>Pesado</fullName>
            </value>
            <value>
                <fullName>Utilitário</fullName>
            </value>
            <value>
                <fullName>Moto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>