force-app/main/default/objects/Opportunity/fields/ValorAproximadoParcela__c.field-meta.xml
<CustomField>
    <fullName>ValorAproximadoParcela__c</fullName>
    <label>Valor aproximado da parcela</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>