force-app/main/default/objects/Opportunity/fields/ValorFinanciamento__c.field-meta.xml
<CustomField>
    <fullName>ValorFinanciamento__c</fullName>
    <label>Valor do financiamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>