force-app/main/default/objects/Opportunity/fields/ValorUtilizado__c.field-meta.xml
<CustomField>
    <fullName>ValorUtilizado__c</fullName>
    <inlineHelpText>Preencher quando for utilizado valor parcial.</inlineHelpText>
    <label>Valor utilizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>