force-app/main/default/objects/Opportunity/fields/Veiculo__c.field-meta.xml
<CustomField>
    <fullName>Veiculo__c</fullName>
    <inlineHelpText>Modelo completo do veículo.</inlineHelpText>
    <label>Veículo</label>
    <type>TextArea</type>
</CustomField>