force-app/main/default/objects/Opportunity/fields/VeiculoFinanciado__c.field-meta.xml
<CustomField>
    <fullName>VeiculoFinanciado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Veículo financiado</label>
    <type>Checkbox</type>
</CustomField>