force-app/main/default/objects/Opportunity/fields/VeiculoFinanciadoQuitado__c.field-meta.xml
<CustomField>
    <fullName>VeiculoFinanciadoQuitado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Veículo financiado ou quitado</label>
    <type>Checkbox</type>
</CustomField>