force-app/main/default/objects/Opportunity/fields/VeiculoQuitado__c.field-meta.xml
<CustomField>
    <fullName>VeiculoQuitado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Veículo quitado</label>
    <type>Checkbox</type>
</CustomField>