force-app/main/default/objects/Opportunity/recordTypes/Investimentos.recordType-meta.xml
<RecordType>
    <fullName>Investimentos</fullName>
    <active>true</active>
    <businessProcess>Oportunidades Captação e Investimento</businessProcess>
    <label>Investimentos</label>
</RecordType>