force-app/main/default/objects/Opportunity/recordTypes/OperacoesEstruturadas.recordType-meta.xml
<RecordType>
    <fullName>OperacoesEstruturadas</fullName>
    <active>true</active>
    <businessProcess>Oportunidades Securitizadora</businessProcess>
    <label>Operações estruturadas</label>
</RecordType>