force-app/main/default/objects/Opportunity/recordTypes/ProdutosFinanceiros.recordType-meta.xml
<RecordType>
    <fullName>ProdutosFinanceiros</fullName>
    <active>true</active>
    <businessProcess>Produtos Financeiros</businessProcess>
    <label>Produtos financeiros</label>
</RecordType>