force-app/main/default/objects/Opportunity/recordTypes/ProdutosFinanceirosVeiculos.recordType-meta.xml
<RecordType>
    <fullName>ProdutosFinanceirosVeiculos</fullName>
    <active>true</active>
    <businessProcess>Produtos Financeiros</businessProcess>
    <label>Produtos financeiros - Veículos</label>
</RecordType>