force-app/main/default/objects/Opportunity/validationRules/BloquearEdicaoTaxaCaptacao.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearEdicaoTaxaCaptacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     ISPICKVAL(StageName, &apos;Ag Aprovação&apos;),
				 OR(RecordType.Name = &apos;Investimentos&apos;, RecordType.Name = &apos;Operações estruturadas&apos;),
				 ISCHANGED(Taxa__c)
)</errorConditionFormula>
    <errorDisplayField>Taxa__c</errorDisplayField>
    <errorMessage>Não é possível realizar alteração no campo Taxa enquanto a Oportunidade estiver Aguardando Aprovação.</errorMessage>
</ValidationRule>