force-app/main/default/objects/Opportunity/validationRules/Bloqueia_fase_contrato_assinado.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueia_fase_contrato_assinado</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISPICKVAL(StageName, &quot;Elaboração de Contrato&quot;) ||
 ISPICKVAL(StageName, &quot;Contrato Enviado&quot;) ||
 ISPICKVAL(StageName, &quot;Contrato Assinado&quot;) ||
 ISPICKVAL(StageName, &quot;Perdido&quot;),
 NOT(
   $Profile.Name = &quot;Formalização&quot; ||
   $Profile.Name = &quot;Administrador do sistema&quot;
 )
)</errorConditionFormula>
    <errorMessage>Quando sua Oportunidade estiver na fase &quot;Elaboração de contrato,Contarto Enviado, Contrato Assinado e Perddido&quot; Ela não pode ser modificada.</errorMessage>
</ValidationRule>