force-app/main/default/objects/Opportunity/validationRules/blq_periddoo.validationRule-meta.xml
<ValidationRule>
    <fullName>blq_periddoo</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Elaboração de Contrato&quot;) ||
    ISPICKVAL(StageName, &quot;Contrato assinado&quot;) ||
    ISPICKVAL(StageName, &quot;Contrato enviado&quot;) ||
    ISPICKVAL(StageName, &quot;Perdido&quot;),
    NOT(
        $Profile.Name = &quot;System Administrator&quot; ||
        $Profile.Name = &quot;Formalização&quot; ||
        $Profile.Name = &quot;Executivo de Formalização&quot;
    )
)</errorConditionFormula>
    <errorMessage>Quando sua oportunidade estiver na fase Elaboração de contrato, Contrato Enviado, Contrato assinado ou perdido não e possivel editar nenhuma informação.</errorMessage>
</ValidationRule>