force-app/main/default/objects/Opportunity/validationRules/JustificativaPendenciaComprador.validationRule-meta.xml
<ValidationRule>
    <fullName>JustificativaPendenciaComprador</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL(PendenciaComprador__c, &apos;Sim&apos; ),
   ISBLANK( JustifiquePendenciaComprador__c)
)</errorConditionFormula>
    <errorDisplayField>JustifiquePendenciaComprador__c</errorDisplayField>
    <errorMessage>Informe a pendência do comprador.</errorMessage>
</ValidationRule>