force-app/main/default/objects/Opportunity/validationRules/JustificativaPendenciaVendedor.validationRule-meta.xml
<ValidationRule>
    <fullName>JustificativaPendenciaVendedor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL(PendenciaVendedor__c , &apos;Sim&apos; ),
   ISBLANK( JustifiquePendenciaVendedor__c)
)</errorConditionFormula>
    <errorDisplayField>JustifiquePendenciaVendedor__c</errorDisplayField>
    <errorMessage>Informe a pendência do vendedor.</errorMessage>
</ValidationRule>