force-app/main/default/objects/Opportunity/validationRules/JustifiquePendenciaBem.validationRule-meta.xml
<ValidationRule>
    <fullName>JustifiquePendenciaBem</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL(PendenciaBem__c, &apos;Sim&apos; ),
   ISBLANK( JustifiquePendenciaBem__c)
)</errorConditionFormula>
    <errorDisplayField>JustifiquePendenciaBem__c</errorDisplayField>
    <errorMessage>Informe a pendência do bem.</errorMessage>
</ValidationRule>