force-app/main/default/objects/Opportunity/validationRules/PendenciaAnaliseJuridica.validationRule-meta.xml
<ValidationRule>
    <fullName>PendenciaAnaliseJuridica</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL(StageName, &apos;Análise jurídica&apos;),
 OR(
   ISPICKVAL(PendenciaComprador__c,&apos;Sim&apos;),
   ISPICKVAL(PendenciaVendedor__c, &apos;Sim&apos;),
   ISPICKVAL(PendenciaBem__c, &apos;Sim&apos;)
 )
)</errorConditionFormula>
    <errorMessage>Você não pode prosseguir para próxima fase da oportunidade caso haja pendências.</errorMessage>
</ValidationRule>