force-app/main/default/objects/Opportunity/validationRules/PrazoMaximoComercialTerreno.validationRule-meta.xml
<ValidationRule>
    <fullName>PrazoMaximoComercialTerreno</fullName>
    <active>true</active>
    <description>Prazo máximo pro subtipo comercial ou terreno não deve ser maior que 240 meses</description>
    <errorConditionFormula>AND(
PrazoOperacao__c &gt; 240,
OR(
ISPICKVAL(Subtipo__c, &apos;Comercial&apos;),
ISPICKVAL(Subtipo__c, &apos;Terreno&apos;)))</errorConditionFormula>
    <errorMessage>Para imóvel comercial ou terreno o prazo máximo de financiamento é de 240 meses.</errorMessage>
</ValidationRule>