force-app/main/default/objects/Opportunity/validationRules/PrazoMinimoImovel.validationRule-meta.xml
<ValidationRule>
    <fullName>PrazoMinimoImovel</fullName>
    <active>true</active>
    <description>Verifica se o prazo mínimo é de 12 meses considerando os subtipos residencial e</description>
    <errorConditionFormula>AND(
PrazoOperacao__c  &lt; 12,
OR(ISPICKVAL(Subtipo__c, &apos;Residencial&apos;),
ISPICKVAL(Subtipo__c, &apos;Terreno&apos;),
ISPICKVAL(Subtipo__c, &apos;Comercial&apos;)))</errorConditionFormula>
    <errorMessage>Para Imóvel comercial, residencial ou Terreno, o prazo mínimo deve ser de 12 meses.</errorMessage>
</ValidationRule>