force-app/main/default/objects/Opportunity/validationRules/PrazoOperacaoMaximo.validationRule-meta.xml
<ValidationRule>
    <fullName>PrazoOperacaoMaximo</fullName>
    <active>true</active>
    <errorConditionFormula>PrazoOperacao__c &gt; 420</errorConditionFormula>
    <errorMessage>O prazo máximo é de 420 meses.</errorMessage>
</ValidationRule>