force-app/main/default/objects/Opportunity/validationRules/ValorMaximo.validationRule-meta.xml
<ValidationRule>
    <fullName>ValorMaximo</fullName>
    <active>true</active>
    <errorConditionFormula>ValorFinanciamento__c &gt; 1500000</errorConditionFormula>
    <errorMessage>Valor máximo de financiamento é de  R$ 1.500.000,00.</errorMessage>
</ValidationRule>