force-app/main/default/objects/Opportunity/validationRules/VeiculosJusitificativaPerdido.validationRule-meta.xml
<ValidationRule>
    <fullName>VeiculosJusitificativaPerdido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     UnidadeNegocio__c = &quot;Produtos financeiros - Veículos&quot;,
     ISPICKVAL(StageName, &apos;Perdido&apos;),
     ISBLANK(Justificativa__c)
)</errorConditionFormula>
    <errorMessage>Para fechar esta oportunidade como &apos;Perdido&apos;, é necessário preencher o campo Justificativa.</errorMessage>
</ValidationRule>