force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>UnidadeNegocio__c</columns>
    <columns>Produto__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as oportunidades</label>
    <sharedTo>
        <group>CaptacaoInvestimentos</group>
        <role>DiretoriaA</role>
        <role>DiretoriaB</role>
        <role>DiretoriaC</role>
        <role>DiretoriaD</role>
    </sharedTo>
</ListView>